src/main/java/org/example/moviesplatform/error/model/WishlistNotFoundException.java
package org.example.moviesplatform.error.model;

public class WishlistNotFoundException extends RuntimeException {
    public WishlistNotFoundException(String message) {
        super(message);
    }
}